# genie

./: .gitignore  LICENSE  README.md  pyproject.toml
blender/ficus/: script.py
docker/: Dockerfile  docker_run.sh  entrypoint.sh
genie/: exporter.py  genie_config.py  genie_model.py  genie_pipeline.py  genie_trainer.py  render.py
genie/data/: dataparsers.py
genie/editing/: prepare_edits.py
genie/field/: encodings.py  field.py  mlp.py
genie/knn/: KNN.cu  build_optix.sh  knn_algorithms.py
genie/utils/: schedulers.py  viewer_utils.py
