[project]
name = "nerfstudio-genie"
description = "Gaussian Splatting Encoded Neural Radiance Fields"
version = "0.1.0"

dependencies = [
    "nerfstudio >= 0.3.0",
    "pybind11"
    ] 

[tool.setuptools.packages.find]
include = ["genie*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
genie = 'genie.genie_config:genie'

[project.scripts]
# Note, add entrypoint name to nerfstudio/scripts/completions/install.py to include CLI completion
genie-export = 'genie.exporter:entrypoint'
genie-render = 'genie.render:entrypoint'